# rgtpd

./: Makefile  Makefile.am  README  configure.ac  install-pl  make.defs  make.globaldefs
lib/: Makefile  ehandle.h  md5.c  misc.c  rgtp.h  strerror.c
lib/rsadsi/: md5.c  md5.h
libdes-3.00/: des  makefile  read_pwd.c
server/: Makefile  Makefile.am  config.h  crontab.example  expire  groggsd.c  lock-updatesecret  lockfile.c  md5.h  misc.h  regusermail  sehandle.c  test  udbmanage.c  updatesecret  userdb-backup  userdb.c  userdb.h
